--- a/styles.css
+++ b/styles.css
@@ -73,10 +73,12 @@ video {
   background-color: white !important;
   height: 85% !important;
   margin-top: 10%;
+  z-index: 0;
 }
 
 .my-video-dimensions {
   background-color: white !important;
+  z-index: 0;
 }
 
 .video-container {
