--- a/styles.css
+++ b/styles.css
@@ -76,6 +76,10 @@ video {
   z-index: 0;
 }
 
+video {
+  z-index: 0;
+}
+
 .my-video-dimensions {
   background-color: white !important;
   z-index: 0;
@@ -115,8 +119,4 @@ video {
   font-size: 24px;
   line-height: 32px;
   font-weight: 500;
-}
-
-.scroll {
-  overflow: scroll;
 }
