--- a/styles.css
+++ b/styles.css
@@ -92,19 +92,22 @@ video {
   background-color: white;
   z-index: 0;
   height: 300px;
+  position: absolute;
+  width: -webkit-fill-available;
 }
 
 .info-tapa {
   z-index: 999;
   padding: 16px 24px;
   border-radius: 20px;
-  margin-top: -35px;
+  margin-top: -15px;
   background-color: #4d509d;
   min-height: 376px;
   color: white;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
     "Segoe UI Emoji", "Segoe UI Symbol" !important;
   position: absolute;
+  top: 300px;
   width: -webkit-fill-available;
 }
 
