--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  height: 105vh;
   padding: 0;
   margin: 0;
   background-color: #f0dfc3;
@@ -98,14 +98,14 @@ video {
 
 .info-tapa {
   z-index: 999;
-  padding: 16px 24px;
+  padding: 17px 24px;
   border-radius: 20px;
-  margin-top: -15px;
+  margin-top: -10px;
   background-color: #4d509d;
-  min-height: 376px;
+  min-height: 342px;
   color: white;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol" !important;
+  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol" !important;
   position: absolute;
   top: 300px;
   width: -webkit-fill-available;
@@ -113,13 +113,33 @@ video {
 
 .bar-name {
   font-size: 15px !important;
-  font-weight: 400;
-  margin-bottom: 3px !important;
+  font-weight: 300;
+  margin-top: 3px !important;
+  margin-bottom: 2px !important;
   text-transform: uppercase;
+  line-height: 32px;
+  letter-spacing: 0.2px;
 }
 
 .tapa-name {
   font-size: 24px;
   line-height: 32px;
-  font-weight: 500;
+  font-weight: 400;
+  margin: 0;
+  letter-spacing: 0.3px;
+  margin-bottom: 10px !important;
+}
+
+.tapa-description {
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 22px;
+  margin: 0;
+  letter-spacing: 0.1px;
+}
+
+.vjs-poster {
+  height: 85% !important;
+  background-color: #ffffff !important;
+  margin-top: 10% !important;
 }
