--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
 body {
-  height: 105vh;
   padding: 0;
   margin: 0;
   background-color: #f0dfc3;
@@ -92,9 +91,8 @@ video {
   background-color: white;
   z-index: 0;
   height: 300px;
-  position: fixed;
+  position: absolute;
   width: -webkit-fill-available;
-  margin-left: -19px;
   padding-bottom: 20px;
 }
 
@@ -104,7 +102,7 @@ video {
   border-radius: 20px;
   margin-top: 0;
   background-color: #4d509d;
-  min-height: 342px;
+  min-height: 350px;
   color: white;
   font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol" !important;
