--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@ body {
   padding: 0;
   margin: 0;
   background-color: #f0dfc3;
+  height: 110vh;
 }
 
 video {
@@ -102,7 +103,7 @@ video {
   border-radius: 20px;
   margin-top: 0;
   background-color: #4d509d;
-  min-height: 350px;
+  min-height: 324px;
   color: white;
   font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol" !important;
