--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,7 @@ video {
 }
 
 .swiper {
-  height: 110vh;
+  height: 694px;
 }
 .image-container {
   height: 300px;
@@ -74,7 +74,7 @@ video {
 .video-js .vjs-tech {
   background-color: white !important;
   height: 100% !important;
-  margin-top: 5%;
+  margin-top: 15px;
   z-index: 0;
 }
 
@@ -185,4 +185,24 @@ p {
 
 .closed {
   display: none;
+}
+
+.footer {
+  min-height: 90px;
+  background-color: #f0dfc3;
+  display: flex;
+  width: -webkit-fill-available;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.logo-footer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.logo-footer img {
+  max-height: 30px;
+  width: 60px;
 }
