--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@ body {
   background-color: #f0dfc3;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
+
 video {
   z-index: 0;
 }
