--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,13 @@ body::-webkit-scrollbar {
   display: none;
 }
 
+::-webkit-scrollbar,
+*::-webkit-scrollbar {
+  display: none;
+  color: fff;
+  height: 0;
+}
+
 html {
   scrollbar-width: none;
 }
