--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,15 @@ body::-webkit-scrollbar {
   z-index: 11;
   position: fixed;
   top: 0;
+}
+
+.first-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.second-slide {
   display: flex;
   justify-content: center;
   align-items: center;
