--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,23 @@ body::-webkit-scrollbar {
   src: url("../static/fonts/Barracuda-Bold.ttf");
 }
 
+:root {
+  --swiper-theme-color: #4d509d !important;
+}
+
+.img-slider-1 {
+  height: 220px !important;
+  margin-bottom: 25px;
+  margin-left: -20px;
+  margin-top: -40px;
+}
+
+.img-slider-3 {
+  height: 160px !important;
+  margin-bottom: 25px;
+  margin-top: 1px;
+}
+
 ::-webkit-scrollbar,
 *::-webkit-scrollbar {
   display: none;
@@ -29,20 +46,77 @@ body::-webkit-scrollbar {
   top: 0;
 }
 
+.intro-text {
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 22px;
+  margin: 0;
+  letter-spacing: 0.1px;
+  margin-bottom: 10px;
+  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol" !important;
+  color: #4d509d;
+  text-align: center;
+}
+
+.intro-content {
+  padding: 0 15%;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-head {
+  font-size: 23px;
+  line-height: 32px;
+  font-weight: 400;
+  margin: 0;
+  font-family: Barracuda, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol" !important;
+  letter-spacing: 0.8px;
+  margin-bottom: 8px !important;
+  text-align: center;
+  color: #4d509d;
+}
+
 .first-slide {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
 .second-slide {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+}
+
+button {
+  background: #4d509d;
+  border-radius: 23px;
+  border: 0;
+  padding: 10px 24px;
+  color: white;
+  font-size: 16px;
+  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol" !important;
+  margin-top: 8px;
+}
+
+.third-slide {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 html {
   scrollbar-width: none;
+}
+
+.intro {
+  height: 100vh !important;
 }
 
 video {
