--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,24 @@ body::-webkit-scrollbar {
   src: url("../static/fonts/Barracuda-Bold.ttf");
 }
 
+.desktop {
+  background-color: #f0dfc3;
+  height: 100vh;
+  width: 100vw;
+  position: fixed;
+  z-index: 99;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+@media only screen and (max-width: 414px) {
+  .desktop {
+    display: none;
+  }
+}
+
 :root {
   --swiper-theme-color: #4d509d !important;
 }
@@ -22,6 +40,10 @@ body::-webkit-scrollbar {
   margin-bottom: 25px;
   margin-left: -20px;
   margin-top: -40px;
+}
+
+.lock-scroll {
+  overflow-y: hidden;
 }
 
 .img-slider-3 {
