--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,46 @@ body::-webkit-scrollbar {
   --swiper-theme-color: #4d509d !important;
 }
 
+.hamburger {
+  width: 26px;
+  cursor: pointer;
+}
+
+.hamburger:after,
+.hamburger:before,
+.hamburger div {
+  background-color: #4d509d;
+  border-radius: 0px;
+  content: "";
+  display: block;
+  height: 3px;
+  margin: 4px 1px;
+  transition: all 0.2s ease-in-out;
+}
+
+.column-header-tapa {
+  display: flex;
+  justify-content: right;
+  align-items: center;
+  width: 25%;
+  padding: 0 10px;
+}
+
+.hamburger.active:before {
+  background-color: #4d509d;
+  transform: translateY(3px) rotate(135deg);
+}
+
+.hamburger.active:after {
+  background-color: #4d509d;
+  transform: translateY(-4px) rotate(-135deg);
+}
+
+.hamburger.active div {
+  background-color: #4d509d;
+  transform: scale(0);
+}
+
 .img-slider-1 {
   height: 220px !important;
   margin-bottom: 25px;
@@ -61,6 +101,7 @@ body::-webkit-scrollbar {
 
 .loading-screen {
   height: 100vh;
+  width: 100%;
   width: -webkit-fill-available;
   background-color: #f0dfc3;
   z-index: 11;
@@ -183,6 +224,7 @@ video {
   box-shadow: 0 2px 4px 0 rgb(0 0 0 / 8%);
   z-index: 10;
   position: fixed;
+  min-width: 100%;
   width: -webkit-fill-available;
   top: 0;
 }
@@ -237,6 +279,7 @@ video {
   z-index: 0;
   height: 270px;
   position: absolute;
+  min-width: 100%;
   width: -webkit-fill-available;
   padding-bottom: 70px;
 }
