--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body::-webkit-scrollbar {
 
 .column-header-tapa {
   display: flex;
-  justify-content: right;
+  justify-content: flex-end;
   align-items: center;
   width: 25%;
   padding: 0 10px;
