--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,21 @@ body::-webkit-scrollbar {
   justify-content: center;
 }
 
+.slide-2-info {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.slide-2-text {
+  padding: 0 10px 0 25px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+}
+
 .popup-title {
   color: #4d509d;
   font-size: 15px;
